DropDown: Fixed object flow when switching from Text to Visual mode.
Entering a value in the DropDown control while TextSelectionMode was enabled, would cause the internals of DropDown to assume an incorrect initial width of the DropDown control's primary input field (txtCssWidth). This in turn could cause incorrect object flow when toggling from Text mode to Visual mode; the primary input field could become too wide and be placed below selected items, even if there visually was sufficient space to have it flow next to the last selected item. Fixed!

Also made sure that OnInputChanged fires when toggling from Visual to Text mode if the user entered a value, just like it would fire when user switches from one input field between selected items to another, which also clears the value entered by the user.

This is also a nice little optimization, as unnecessary calculations were previously performed when TextSelectionMode was enabled (fitWidthToContent). We also got rid of !important in DropDown.css.

--- a/Controls/DropDown/DropDown.css
+++ b/Controls/DropDown/DropDown.css
@@ -299,7 +299,7 @@ div.FitUiControlDropDown[data-selectionmode="text"] div.FitUiControlDropDownItem
 div.FitUiControlDropDown[data-selectionmode="text"] div.FitUiControlDropDownItems > input
 {
 	font-size: 1em;
-	width: 100% !important; /* Using important to override inline style set by fitWidthToContent(..) */
+	width: 100%;
 	margin-top: 0.2em;
 	margin-top: 0\9; /* Equal height for all controls not enabled in legacy IE where controls assume height of content instead - unset margin */
 }
